# smtpproto

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codeqa-test-tag.yml  codeqa-test.yml  lint-test-tag.yml  publish.yml  test.yml
docs/: api.rst  conf.py  devguide.rst  index.rst  userguide.rst  versionhistory.rst
examples/: gmail.py  local.py  office365.py
src/smtpproto/: _utils.py  async_auth.py  async_client.py  auth.py  client.py  protocol.py  sync_client.py
tests/: conftest.py  test_async_client.py  test_client.py  test_protocol.py
