[build-system]
requires = [
    "setuptools >= 42",
    "wheel >= 0.29.0",
    "setuptools_scm[toml] >= 3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.isort]
src_paths = ["src"]
skip_gitignore = true
line_length = 99
multi_line_output = 4
add_imports = ["from __future__ import annotations"]

[tool.autopep8]
max_line_length = 99

[tool.flake8]
max-line-length = 99

[tool.mypy]
python_version = "3.7"

[tool.pytest.ini_options]
addopts = "-rsx --tb=short"
testpaths = "tests"
filterwarnings = "always"

[tool.coverage.run]
source = ["smtpproto"]

[tool.coverage.report]
show_missing = true
