[metadata]
name = smtpproto
description = Sans-io SMTP client with an AnyIO based async I/O implementation
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
project_urls =
    Documentation = https://smtpproto.readthedocs.io/en/latest/
    Source code = https://github.com/agronholm/smtpproto
    Issue tracker = https://github.com/agronholm/smtpproto/issues
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir=
    = src
packages = find:
python_requires = >= 3.6.2
zip_safe = False
install_requires =
    anyio ~= 2.0.0b2
    dataclasses; python_version < "3.7"

[options.packages.find]
where = src

[options.package_data]
smtpproto = py.typed

[options.extras_require]
test =
    aiosmtpd >= 1.2
    coverage >= 4.5
    curio >= 1.2
    pytest >= 6.0
    trio >= 0.16
    trustme
doc =
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0

[flake8]
max-line-length = 99

[mypy]
ignore_missing_imports = true
